--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@
 
 html, body {
     height: 100%;
-    overflow: hidden; /* Sin scroll */
+    overflow: hidden;
 }
 
 body {
@@ -31,7 +31,7 @@ body {
 }
 
 .titulo {
-    font-size: 2rem;
+    font-size: 4rem;
     color: #333;
     font-weight: 600;
 }
@@ -51,9 +51,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5;
-    border: 2px dashed #ccc;
-    border-radius: 8px;
 }
 
 .contenedor-imagen img {
