--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ html, body {
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: white;
+    background-color: #e0f2f1;
     display: flex;
     flex-direction: column;
 }
