--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ html, body {
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #c8e6c9;
+    background-color: #a5d6a7;
     display: flex;
     flex-direction: column;
 }
